Downgrade Java for keycloak-client to 8 (#72)
Closes #70

Signed-off-by: Giuseppe Graziano <g.graziano94@gmail.com>